// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#50: format: binary in multipart generates FileInput type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  avatar: FileInput;
  document?: string;
  gallery?: FileInput[];
  name: string;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#50: format: binary in multipart generates FileInput type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        formData.append("avatar", body.avatar.data, body.avatar.filename);
        if (body.document !== undefined) formData.append("document", body.document);
        if (body.gallery !== undefined) { for (const file of body.gallery) { formData.append("gallery", file.data, file.filename); } }
        if (body.name !== undefined) formData.append("name", body.name);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#51: format: byte in multipart generates string type (not FileInput) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  avatar: FileInput;
  document?: string;
  gallery?: FileInput[];
  name: string;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#51: format: byte in multipart generates string type (not FileInput) 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        formData.append("avatar", body.avatar.data, body.avatar.filename);
        if (body.document !== undefined) formData.append("document", body.document);
        if (body.gallery !== undefined) { for (const file of body.gallery) { formData.append("gallery", file.data, file.filename); } }
        if (body.name !== undefined) formData.append("name", body.name);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#52: multiple binary fields and binary array generate FileInput entries 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  avatar: FileInput;
  document?: string;
  gallery?: FileInput[];
  name: string;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#52: multiple binary fields and binary array generate FileInput entries 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        formData.append("avatar", body.avatar.data, body.avatar.filename);
        if (body.document !== undefined) formData.append("document", body.document);
        if (body.gallery !== undefined) { for (const file of body.gallery) { formData.append("gallery", file.data, file.filename); } }
        if (body.name !== undefined) formData.append("name", body.name);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#53: FileInput interface includes data (Blob) and filename (string) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  avatar: FileInput;
  document?: string;
  gallery?: FileInput[];
  name: string;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#53: FileInput interface includes data (Blob) and filename (string) 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        formData.append("avatar", body.avatar.data, body.avatar.filename);
        if (body.document !== undefined) formData.append("document", body.document);
        if (body.gallery !== undefined) { for (const file of body.gallery) { formData.append("gallery", file.data, file.filename); } }
        if (body.name !== undefined) formData.append("name", body.name);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#54: file validation constraints are parsed but no validation code is generated 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  file: FileInput;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — File Uploads (3.1-#50-#54) > 3.1-#54: file validation constraints are parsed but no validation code is generated 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        formData.append("file", body.file.data, body.file.filename);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#33: path parameters become flat method args with URL template interpolation 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetUsersUserIdResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#33: path parameters become flat method args with URL template interpolation 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getUsersByUserId: decorateWithErrors<(userId: string) => Promise<void>, never>(
      async (userId: string): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users/\${encodeURIComponent(userId)}\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#34: query parameters are grouped into a Query type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsQuery = {
  page?: number;
  limit?: number;
};

/** OK */
export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#34: query parameters are grouped into a Query type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsQuery } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<(query?: GetItemsQuery) => Promise<void>, never>(
      async (query?: GetItemsQuery): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, { query });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#35: header parameters are grouped into a Headers type and included in method signature 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetDataHeaders = {
  "X-Api-Key"?: string;
  "X-Request-Id": string;
};

/** OK */
export type GetDataResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#35: header parameters are grouped into a Headers type and included in method signature 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetDataHeaders } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getData: decorateWithErrors<(headers: GetDataHeaders) => Promise<void>, never>(
      async (headers: GetDataHeaders): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/data\`, { headers });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#36: cookie parameters are parsed but do not appear in method signature or types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetSessionResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#36: cookie parameters are parsed but do not appear in method signature or types 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getSession: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/session\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#37: required vs optional parameters > makes path params always required regardless of explicit setting 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetItemsItemIdResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#37: required vs optional parameters > makes path params always required regardless of explicit setting 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItemsByItemId: decorateWithErrors<(itemId: string) => Promise<void>, never>(
      async (itemId: string): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items/\${encodeURIComponent(itemId)}\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#37: required vs optional parameters > marks required params without ? and optional params with ? 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetSearchQuery = {
  q: string;
  sort?: string;
  filter?: string;
};

/** OK */
export type GetSearchResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#37: required vs optional parameters > marks required params without ? and optional params with ? 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetSearchQuery } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getSearch: decorateWithErrors<(query: GetSearchQuery) => Promise<void>, never>(
      async (query: GetSearchQuery): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/search\`, { query });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#38-#40: parameter serialization (style, explode, allowEmptyValue) — Tier 2 > does not crash and does not emit style/explode/allowEmptyValue in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetSearchQuery = {
  q?: string;
  ids?: number[];
};

/** OK */
export type GetSearchResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#38-#40: parameter serialization (style, explode, allowEmptyValue) — Tier 2 > does not crash and does not emit style/explode/allowEmptyValue in output 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetSearchQuery } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getSearch: decorateWithErrors<(query?: GetSearchQuery) => Promise<void>, never>(
      async (query?: GetSearchQuery): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/search\`, { query });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#41: deprecated parameter is parsed but not emitted as @deprecated 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsQuery = {
  /** @deprecated */
  oldParam?: string;
  newParam?: string;
};

/** OK */
export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#41: deprecated parameter is parsed but not emitted as @deprecated 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsQuery } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @deprecated oldParam — This parameter is deprecated
     */
    getItems: decorateWithErrors<(query?: GetItemsQuery) => Promise<void>, never>(
      async (query?: GetItemsQuery): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, { query });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#42: parameter description is parsed and emitted in JSDoc 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetSearchQuery = {
  /** The search query string */
  q?: string;
};

/** OK */
export type GetSearchResponse = void;"
`;

exports[`OpenAPI 3.1 — Parameters (3.1-#33-#42) > 3.1-#42: parameter description is parsed and emitted in JSDoc 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetSearchQuery } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param q — The search query string
     */
    getSearch: decorateWithErrors<(query?: GetSearchQuery) => Promise<void>, never>(
      async (query?: GetSearchQuery): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/search\`, { query });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#43: application/json generates body type with object properties 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostUsersBody = {
  name: string;
  email: string;
  age?: number;
};

/** Created */
export type PostUsersResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#43: application/json generates body type with object properties 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUsersBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUsers: decorateWithErrors<(body?: PostUsersBody) => Promise<void>, never>(
      async (body?: PostUsersBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/users\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#44: multipart/form-data generates FormData handling in client 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = {
  name?: string;
  file: FileInput;
};

/** Created */
export type PostUploadResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#44: multipart/form-data generates FormData handling in client 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUploadBody } from './contracts.js';
/* global FormData */
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUpload: decorateWithErrors<(body: PostUploadBody) => Promise<void>, never>(
      async (body: PostUploadBody): Promise<void> => {
        const formData = new FormData();
        if (body.name !== undefined) formData.append("name", body.name);
        formData.append("file", body.file.data, body.file.filename);
        try {
          const result = await requester<void>("POST", \`/upload\`, { body: formData });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#45: application/x-www-form-urlencoded generates body type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostLoginBody = {
  username: string;
  password: string;
};

/** OK */
export type PostLoginResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#45: application/x-www-form-urlencoded generates body type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostLoginBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postLogin: decorateWithErrors<(body: PostLoginBody) => Promise<void>, never>(
      async (body: PostLoginBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/login\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#46: application/octet-stream generates string body type for binary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostBinaryBody = Blob;

/** OK */
export type PostBinaryResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#46: application/octet-stream generates string body type for binary 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostBinaryBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postBinary: decorateWithErrors<(body: PostBinaryBody) => Promise<void>, never>(
      async (body: PostBinaryBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/binary\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#47: multiple content types picks first content type schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostDataBody = {
  jsonField: string;
};

/** OK */
export type PostDataResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#47: multiple content types picks first content type schema 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostDataBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postData: decorateWithErrors<(body: PostDataBody) => Promise<void>, never>(
      async (body: PostDataBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/data\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#48: required vs optional request body > non-optional body arg when required: true 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostOrdersBody = {
  productId: string;
};

/** Created */
export type PostOrdersResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#48: required vs optional request body > non-optional body arg when required: true 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostOrdersBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postOrders: decorateWithErrors<(body: PostOrdersBody) => Promise<void>, never>(
      async (body: PostOrdersBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/orders\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#48: required vs optional request body > optional body arg when required is false or absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PatchProfileBody = {
  bio?: string;
};

/** Updated */
export type PatchProfileResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#48: required vs optional request body > optional body arg when required is false or absent 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PatchProfileBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    patchProfile: decorateWithErrors<(body?: PatchProfileBody) => Promise<void>, never>(
      async (body?: PatchProfileBody): Promise<void> => {
        try {
          const result = await requester<void>("PATCH", \`/profile\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#49: examples in request body are parsed but not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostUsersBody = {
  name: string;
};

/** Created */
export type PostUsersResponse = void;"
`;

exports[`OpenAPI 3.1 — Request Bodies (3.1-#43-#49) > 3.1-#49: examples in request body are parsed but not emitted in output 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUsersBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUsers: decorateWithErrors<(body?: PostUsersBody) => Promise<void>, never>(
      async (body?: PostUsersBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/users\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
